@@ -11,6 +11,9 @@ REST API
   - added "Timeout" parameter to every DICOM operation
   - "/queries/.../answers/../retrieve": "TargetAet" not mandatory anymore
     (defaults to the local AET)
+* Changes:
+  - "/ordered-slices": reverted the change introduced in 1.5.8 and go-back 
+    to 1.5.7 behaviour.
 
 Maintenance
 -----------
